@@ -1,5 +1,6 @@
 User johns
 
+    Fix bug: audio increments invalid audio PTS.
     Fix bug: dvd plugin not working.
     Fix bug: used frame-> instead of video_ctx-> for old libav/ffmpeg.
 
